@@ -20,6 +20,24 @@
 #include <m2s.h>
 
 
+#define UPDATE_THREAD_OCCUPANCY_STATS(ITEM) { \
+	if (ITEM##_kind == ITEM##_kind_private) { \
+		THREAD.ITEM##_occ += THREAD.ITEM##_count; \
+		if (THREAD.ITEM##_count == ITEM##_size) \
+			THREAD.ITEM##_full++; \
+	} \
+}
+
+
+#define UPDATE_CORE_OCCUPANCY_STATS(ITEM) { \
+	if (ITEM##_kind == ITEM##_kind_shared) { \
+		CORE.ITEM##_occ += CORE.ITEM##_count; \
+		if (CORE.ITEM##_count == ITEM##_size * p_threads) \
+			CORE.ITEM##_full++; \
+	} \
+}
+
+
 static int can_commit_thread(int core, int thread)
 {
 	struct uop_t *uop;
@@ -58,6 +76,13 @@ static void commit_thread(int core, int thread, int quant)
 	struct uop_t *uop;
 	int recover = 0;
 	
+	/* Update occupancy stats for shared structures */
+	UPDATE_THREAD_OCCUPANCY_STATS(rob);
+	UPDATE_THREAD_OCCUPANCY_STATS(iq);
+	UPDATE_THREAD_OCCUPANCY_STATS(lsq);
+	UPDATE_THREAD_OCCUPANCY_STATS(phregs);
+
+	/* Commit stage for thread */
 	while (quant && can_commit_thread(core, thread)) {
 		
 		/* Get instruction at the head of the ROB */
@@ -129,6 +154,13 @@ void commit_core(int core)
 {
 	int pass, quant, new;
 
+	/* Update occupancy stats for shared structures */
+	UPDATE_CORE_OCCUPANCY_STATS(rob);
+	UPDATE_CORE_OCCUPANCY_STATS(iq);
+	UPDATE_CORE_OCCUPANCY_STATS(lsq);
+	UPDATE_CORE_OCCUPANCY_STATS(phregs);
+
+	/* Commit stage for core */
 	switch (p_commit_kind) {
 
 	case p_commit_kind_shared:
